# slideshow_player

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  config.ini  fragment.glsl  image_loader.c  image_loader.h  main.c  proto_gen.sh  shader.c  shader.h  ssp_display.c  ssp_display.h  ssp_display_ogl.c  ssp_egl.c  ssp_egl.h  ssp_image_loader.c  ssp_image_loader.h  ssp_list.c  ssp_list.h  ssp_list_test  ssp_list_test.cpp  ssp_observer.c  ssp_render.c  ssp_render.h  ssp_shader.c  ssp_window.c  ssp_window.h  vertex.glsl
examples/: CMakeLists.txt  ssp_graphics_example.c  ssp_list_example.c  ssp_observer_example.c
image_reader/: README.md  image.c  image.h
src/: CMakeLists.txt  main.c  main_list.c  main_observe.c  main_window.c  ssp_helper.c  ssp_helper.h  ssp_image_loader.c  ssp_image_loader.h  ssp_list.c  ssp_list.h  ssp_memory.c  ssp_memory.h  ssp_observer.c  ssp_observer.h  ssp_observer_fsevent.c  ssp_observer_inotify.c  ssp_observer_kqueue.c  ssp_observer_ps.h  ssp_render.c  ssp_render.h  ssp_render_gl33.c  ssp_render_gles20.c  ssp_shader.c  ssp_shader.h  ssp_window.c  ssp_window.h
src/graphics/: CMakeLists.txt  ssp_gl.c  ssp_gl.h  ssp_gl_set.h  ssp_glfw.c  ssp_glfw.h  ssp_glfw_set.h  ssp_image_loader.c  ssp_image_loader.h  ssp_render.c  ssp_render.h  ssp_render_gl33.c  ssp_render_gles20.c  ssp_shader.c  ssp_shader.h  ssp_window.c  ssp_window.h
src/graphics/render/: ssp_render.c  ssp_render.h  ssp_render_gl33.c  ssp_render_internal.h
src/graphics/shader/: gles_fragment.glsl  gles_vertex.glsl
src/list/: CMakeLists.txt  ssp_list.c  ssp_list.h
src/observer/: CMakeLists.txt  ssp_observer.c  ssp_observer.h  ssp_observer_fsevent.c  ssp_observer_inotify.c  ssp_observer_ps.h
src/shader/: gl33_fragment.glsl  gl33_vertex.glsl
src/utils/: ssp_helper.c  ssp_helper.h  ssp_memory.c  ssp_memory.h  ssp_test_storage.c  ssp_test_storage.h
tests/: CMakeLists.txt  ssp_graphics_mock.c  ssp_graphics_mock.h  ssp_graphics_mtest.c  ssp_helper_test.cpp  ssp_helper_utest.cpp  ssp_image_loader_utest.cpp  ssp_list_test.cpp  ssp_list_utest.cpp  ssp_memory_test.cpp  ssp_memory_utest.cpp  ssp_observer_ps_test.cpp  ssp_observer_ps_utest.cpp  ssp_observer_test.cpp  ssp_observer_utest.cpp  ssp_render_gl33_utest.cpp  ssp_render_utest.cpp  ssp_test_storage_utest.cpp  ssp_window_mock.c  ssp_window_utest.cpp
tests/images/: test1.txt  tiny_hex.c
tests/mocks/: ssp_gl_mock.c  ssp_gl_mock.h  ssp_glfw_mock.c  ssp_glfw_mock.h  ssp_render_mock.c  ssp_render_mock.h
wayland_client/: client.c  client.h  shm.c  shm.h  window.c  window.h  xdg_wm_base.c  xdg_wm_base.h
